feat: cities listing service without pagination
